--- a/platforms/android/src/main/assets/app/views/settings/settings.css
+++ b/platforms/android/src/main/assets/app/views/settings/settings.css
@@ -1,56 +1,34 @@
-Page {
-    background-color: #108858;
-    background-image:url("res://roll_bottom");
-    background-repeat: repeat-x;
-    background-position: center bottom;
-}
+@import url('~/shared/sidedrawer.css');
 
-.profilePic {
-    width: 100px;
-    height: 100px;
-    border-radius: 50px;
-    border-width: 4px;
-    border-color: white;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
+.settings-section {
     margin: 0;
 }
-
-.profilePic-shadow {
-    opacity: 0.3;
+.settings-section-switch-label {
+    font-size: 16;
+    margin: 20px 0 20px 16px;
 }
 
-.action-image {
-    width: 40;
-    height: 40;
-    vertical-align: center;
-}
-
-.action-label {
+.settings-section-switch {
+    horizontal-align: right;
+    margin-top: 6;
+    background-color: #300a3c;
     color: #108858;
-    font-size: 18;
-    text-transform:uppercase;
-    font-weight: bold;
-    vertical-align: center;
+    margin: 16px 16px 18px 0;
 }
 
-.dashboard-username {
-    color:white;
-    font-size: 24px;
+.line {
+    height: 1;
+    background-color: rgba(0,0,0,0.1);
 }
 
-.dashboard-scoremeta {
-    color: #2ED492;
-    font-size: 12px;
-    text-transform: uppercase;
-    margin: 4px;
+.btn-save {
+    background-color: #108858;
+    color: white;
+    font-family: "Roboto-Medium";
 }
 
-.dashboard-scorevalue {
-    color: #fff;
-    opacity: 0.5;
-    text-transform: uppercase;
-    font-size: 12px;
-    margin: 4px;
+.btn-logout {
+    background-color: #A50000;
+    color: white;
+    font-family: "Roboto-Medium";
 }
