--- a/app/views/start/start.css
+++ b/app/views/start/start.css
@@ -56,7 +56,7 @@ Page {
 }
 
 .logoLabel {
-    background-image:url("~/images/logo_small.png");
+    background-image:url("res://logo_small");
     width:200px;
     height:120px;
     background-size: contain;
