--- a/app/views/start/start.css
+++ b/app/views/start/start.css
@@ -56,7 +56,7 @@ Page {
 }
 
 .logoLabel {
-    background-image:url("res://logo_small");
+    background-image:url("res://icon_small");
     width:200px;
     height:120px;
     background-size: contain;
@@ -64,15 +64,15 @@ Page {
     background-repeat: no-repeat;
 
     animation-name: logolabel_anim;
-    animation-duration: 0.5s;
+    animation-duration: 0.25s;
     animation-fill-mode: forwards;
     animation-delay: 3.1s;
 }
 
 @keyframes logolabel_anim {
     0% { transform: scale(0.1); opacity: 0; }
-    60% { transform: scale(1.1); opacity: 1; }
-    100% { transform: scale(1); }
+    60% { transform: scale(0.6); opacity: 1; }
+    100% { transform: scale(1); opacity: 1; }
 }
 
 .formStack {
@@ -99,14 +99,4 @@ Page {
 .fbConnect:active {
     background-color: white;
     color: #108858;
-}
-
-.loadingCont {
-    background-color:black;
-    opacity:0.5;
-}
-
-.loadingBar {
-    width: 75px;
-    height: 75px;
 }
