Removed & replaced Action Bar on Dashboard

--- a/app/app.css
+++ b/app/app.css
@@ -32,6 +32,7 @@ Page {
     font-weight: bold;
     vertical-align: center;
     font-family: "Roboto-Medium";
+    text-align: center;
 }
 
 .fa {
