--- a/app/views/dashboard/dashboard.css
+++ b/app/views/dashboard/dashboard.css
@@ -60,8 +60,6 @@ Page {
     animation-fill-mode: forwards;
     animation-delay: 0s;
     animation-timing-function: ease-in;
-
-    margin-top: -25px;
 }
 
 @keyframes mainContainer-anim {
@@ -98,7 +96,7 @@ Page {
 }
 
 .action-bar {
-    margin-top:24;
+    /*margin-top:24;*/
     height: 50;
     background-color: rgba(255,255,255,0.7);
     border-width: 0 0 1 0;
@@ -109,4 +107,62 @@ Page {
     width: 20;
     height: 20;
     margin: 15;
+}
+
+.list-groups {
+    background-color:white;
+    border-radius: 2px;
+    margin: 10;
+    border-width: 0 0 2 0;
+    font-size: 12;
+    border-color: #108858;
+}
+
+.list-groups-title {
+    font-size: 16;
+    padding: 10;
+    text-transform: uppercase;
+    text-align: right;
+    font-family: "Roboto-Bold";
+    color: #108858;
+
+    background-color: #108858;
+    color: white;
+    border-width: 2 0 0 0;
+    border-color:white;
+}
+
+.list-groups-label {
+    padding: 10;
+    margin: 0;
+}
+
+.list-groups-buttons {
+    margin: 0 10 0 10;
+    border: 1 0 0 0;
+    border-color: rgba(0,0,0,0.2);
+}
+
+.list-groups-button-start {
+    font-size: 12;
+    font-family: "Roboto-Medium";
+    color:white;
+    background-color: #300a3c;
+}
+
+.list-groups-button-start:active {
+    color: #300a3c;
+    background-color: white;
+}
+
+.list-groups-button-join {
+    font-size: 12;
+    font-family: "Roboto-Medium";
+    color:white;
+    background-color:#108858;
+}
+
+.list-groups-button-join:active {
+    color: #108858;
+    background-color: white;
 }
