--- a/app/views/group-start/group-start.css
+++ b/app/views/group-start/group-start.css
@@ -1,1 +1,117 @@
 @import url('~/shared/sidedrawer.css');
+
+Page {
+    background-color: #108858;
+    /*background-image:url("res://roll_bottom");
+    background-repeat: repeat-x;
+    background-position: center bottom;*/
+    background-image:url("res://bg_photo_2");
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+}
+
+.main-container {
+    background-color: white;
+    border-radius: 2;
+    font-size: 12;
+}
+
+.main-container-title {
+    font-size: 16;
+    padding: 10;
+    text-transform: uppercase;
+    text-align: right;
+    font-family: "Roboto-Bold";
+
+    background-color: #108858;
+    color: white;
+    border-width: 2 0 0 0;
+    border-color:white;
+}
+
+.form-label {
+    padding: 3 10;
+    margin: 0;
+    text-transform: uppercase;
+    font-size: 10;
+    color: #108858;
+    font-family: "Roboto-Medium";
+
+}
+
+.form-label-hint {
+    padding: 0 10;
+    font-size: 9;
+    font-color: rgba(0,0,0,0.5);
+    font-style: italic;
+    text-align: right;
+}
+
+.form-field-text {
+    margin: 0 5;
+}
+
+.form-field-number {
+    margin: 0 5;
+}
+
+.form-field-group-number {
+    text-align: right;
+}
+
+.form-field-group {
+    margin: 0 5;
+}
+
+.form-field-group-switch {
+    horizontal-align: right;
+    background-color: #300a3c;
+    color: #108858;
+    margin: 6 0 8 0;
+}
+
+.form-field-group-key {
+    margin: 10 5 0 0;
+    text-align:right;
+}
+
+.form-field-group-number {
+    margin: 0;
+}
+
+.line {
+    margin: 0 5;
+    height: 1;
+    background-color: rgba(0,0,0,0.1);
+}
+
+.list-groups-buttons {
+    margin: 0 10 0 10;
+    border: 1 0 0 0;
+    border-color: rgba(0,0,0,0.2);
+}
+
+.list-groups-button-cancel {
+    font-size: 12;
+    font-family: "Roboto-Medium";
+    color:white;
+    background-color: #A50000;
+}
+
+.list-groups-button-cancel:active {
+    color: #A50000;
+    background-color: white;
+}
+
+.list-groups-button-create {
+    font-size: 12;
+    font-family: "Roboto-Medium";
+    color:white;
+    background-color:#108858;
+}
+
+.list-groups-button-create:active {
+    color: #108858;
+    background-color: white;
+}
