--- a/app/views/dashboard/dashboard.css
+++ b/app/views/dashboard/dashboard.css
@@ -166,3 +166,10 @@ Page {
     color: #108858;
     background-color: white;
 }
+
+.list-groups-item-icon {
+    width: 20;
+    height: 20;
+    opacity: 0.5;
+    margin: 0 -5 0 5;
+}
