--- a/app/views/group/group.css
+++ b/app/views/group/group.css
@@ -33,6 +33,14 @@ Page {
 
 .searchbar {}
 
+
+.list-groups-item-icon {
+    width: 20;
+    height: 20;
+    opacity: 0.5;
+    margin: 0 -5 0 5;
+}
+
 .list-groups-icon-member {
     margin: 13 3 13 3;
     border-radius: 2;
