--- a/app/views/dashboard/dashboard.css
+++ b/app/views/dashboard/dashboard.css
@@ -131,13 +131,22 @@ Page {
     margin: 0 -5 0 5;
 }
 
-.list-groups-item-label.inactive {
-    opacity: 0.25;
-}
-
 .list-groups-label {
     padding-top:13;
 }
+
+.list-groups-item-indicator-active {
+    width: 5;
+    height: 100%;
+    background-color: #108858;
+}
+
+.list-groups-item-indicator-inactive {
+    width: 5;
+    height: 100%;
+    background-color: #ddd;
+}
+
 
 .list-groups-icon-active {
     margin: 13 3 13 3;
