--- a/app/app.css
+++ b/app/app.css
@@ -45,9 +45,15 @@ Page {
 }
 
 .action-icon-left {
-    width: 20;
-    height: 20;
-    margin: 15;
+    color: #108858;
+    padding: 15;
+    font-size: 20;
+}
+
+.action-icon-right {
+    color: #108858;
+    padding: 15;
+    font-size: 20;
 }
 
 .list-groups {
