--- a/app/views/dashboard/dashboard.css
+++ b/app/views/dashboard/dashboard.css
@@ -93,11 +93,16 @@ Page {
 }
 
 .dashboard-scorevalue {
+    border-radius: 10;
+    border-width: 2;
+    border-color: rgba(0,0,0,0.2);
+    padding: 4 8;
+    font-family: "Roboto-Black";
+    font-size: 14;
+    background-color: #D4980E;
     color: #fff;
-    opacity: 0.6;
     text-transform: uppercase;
-    font-size: 12px;
-    margin: 4px;
+    vertical-align: middle;
 }
 
 .list-groups-button-start {
