Added trophy support and user status in groups

--- a/app/views/dashboard/dashboard.css
+++ b/app/views/dashboard/dashboard.css
@@ -146,6 +146,12 @@ Page {
     background-color: #108858;
 }
 
+.list-groups-item-indicator-pending {
+    width: 5;
+    height: 100%;
+    background-color: #d4980e;
+}
+
 .list-groups-item-indicator-inactive {
     width: 5;
     height: 100%;
