--- a/app/views/group/group.css
+++ b/app/views/group/group.css
@@ -10,6 +10,7 @@ Page {
 
 .action-bar {
     height: auto;
+    border-width: 0;
 }
 
 .action-meta {
@@ -27,6 +28,26 @@ Page {
 
 .group-trophy {
     margin: 10;
+
+    border-radius: 2;
+    background-color: rgba(0,0,0,0.25);
+    border-width: 1;
+    border-color: #333;
+    padding: 0 0 12 0;
+
+    opacity: 0;
+    transform: scale(0);
+    animation-name: group-meta-anim;
+    animation-duration: 0.3;
+    animation-fill-mode: forwards;
+
+}
+
+.group-trophy-no-trophy {
+    font-family: 'Roboto-Medium';
+    color: #ccc;
+    text-align: center;
+    padding: 3;
 }
 
 .group-trophy-name {
@@ -41,6 +62,11 @@ Page {
     margin: 10;
 }
 
+.group-trophy-round-entry {
+    font-family: 'Roboto-Medium';
+    color: #ccc;
+}
+
 .group-trophy-round-label {
     font-family: 'Roboto-Medium';
     color: #ccc;
@@ -53,6 +79,39 @@ Page {
     text-align: left;
     font-family: 'Roboto-Medium';
     color: white;
+}
+
+/* Not Entered */
+
+.group-not-entered {
+    margin: 0 10;
+    background-color: #d4980e;
+    color: white;
+    border-radius: 2;
+    padding: 10;
+}
+
+.group-not-entered-label {
+    text-transform: uppercase;
+    font-size: 24;
+    font-family: 'Roboto-Black';
+    text-align: right;
+}
+
+.group-not-entered-pts {
+    font-size: 14;
+    vertical-align: middle;
+    color: rgba(255,255,255,0.2);
+    text-align: left;
+    text-transform: uppercase;
+    padding: 0 5;
+}
+
+.group-not-entered-cost {
+    vertical-align: middle;
+    text-align: left;
+    font-size: 24;
+    color: rgba(255,255,255,0.5);
 }
 
 
@@ -503,6 +562,23 @@ Page {
     padding: 5 7;
     text-align: right;
     font-size: 10;
+}
+
+.list-groups-header-date {
+    text-align: left;
+    font-size: 10;
+    text-transform: uppercase;
+    font-family: 'Roboto-Bold';
+    vertical-align: middle;
+    color: rgba(255,255,255,0.5);
+}
+
+.list-groups-header-time {
+    text-align: right;
+    font-size: 10;
+    font-family: 'Roboto-Bold';
+    text-transform: uppercase;
+    vertical-align: middle;
 }
 
 
